mobile-nav/fix component height bug on safari

--- a/client/src/components/MobileNav/_mobile-nav.scss
+++ b/client/src/components/MobileNav/_mobile-nav.scss
@@ -9,9 +9,12 @@
 .mobile-nav {
   position: fixed;
   top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
   z-index: 999999;
-  width: 100vw;
-  min-height: 100vh;
+  // width: 100vw;
+  // min-height: 100vh;
 
   transform: translateX(-100%);
   transition: all 0.5s;
